srcs_config = [
    'config.c',
]

config_dep = [common_dep]

if build_dbus
    srcs_config += 'dbus-core.c'
    config_dep += dbus_dep
endif

if build_hal
    srcs_config += 'hal.c'
    config_dep += hal_dep
endif

if build_udev
    srcs_config += 'udev.c'
    config_dep += udev_dep
endif

if host_machine.system() == 'netbsd' or host_machine.system() == 'openbsd'
    srcs_config += 'wscons.c'
endif
